@@ -1,3 +1,11 @@
+2009-08-26  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
+
+	patch by: Jan Urbanski
+
+	* flumotion/component/misc/porter/porter.py:
+	* flumotion/component/misc/porter/porter.xml:
+	Add external-interface property for porter.
+
 2009-08-25  Alvin Delagon  <adelagon@flumotion.com>
 
 	reviewed by: Zaheer Abbas Merali
